# lottery-app

./: LICENSE  README.md  components.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-beta.yml  build-dev.yml  release.yml
go-tools/: main.go
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/resources/: userTemplate.xlsx
src-tauri/src/: commands.rs  db.rs  main.rs  model.rs  utils.rs
src-tauri/src/commands/: basic.rs  mod.rs  prize.rs  user.rs  winner.rs
src-tauri/src/db/: basic.rs  mod.rs  prize.rs  user.rs  winner.rs
src-tauri/src/utils/: mod.rs
src/assets/css/: index.css  main.css  wedding.css
src/components/: Management.vue  MenuBar.vue  PrizeList.vue  StartFiled.vue  StartFiled2.vue  ThreeDCards.vue
src/hooks/: use3D.ts  useCard.ts  useMatrix.ts  userCard.ts
src/router/: index.ts
src/types/: index.ts
src/utils/: eventbus.ts  lottery.ts
src/views/: LuckUsers.vue  Manage.vue  ManageBasic.vue  ManagePrize.vue  ManageUser.vue  ManageWinner.vue  Wedding.vue  Weeding.vue  Winners.vue
src/views/ManagePrize/: add.vue  edit.vue
src/views/ManageUser/: add.vue  batchOper.vue  edit.vue
src/views/manage/: Manage.vue
src/views/manage/prize/: Add.vue  Index.vue
src/views/manage/user/: BatchOper.vue  Edit.vue  Index.vue
src/views/manage/wedding/: Edit.vue  Index.vue
src/views/model/: Wedding.vue
src/views/winner/: Index.vue
tools/: Makefile  main.go
