[package]
name = "lottery-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["jimmy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
rusqlite = "0.31.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
tauri = { version = "1.5", features = [ "dialog-all", "path-all", "fs-all", "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0" # 使用最新版本
directories = "4.0.1" # 请检查 crates.io 以获取最新版本
rand = "0.8.5"
hex = "0.4.3"
thiserror = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
